Add hbase-1.0.0 release into source control.